--- a/Cargo.toml
+++ b/Cargo.toml
@@ -103,7 +103,7 @@ rustls-tls-native-roots = [
 
 [dependencies]
 clickhouse-derive = { version = "0.2.0", path = "derive" }
-clickhouse-types = { version = "*", path = "types" }
+clickhouse-types = { version = "0.1.0", path = "types" }
 thiserror = "1.0.16"
 serde = "1.0.106"
 bytes = "1.5.0"
@@ -137,7 +137,6 @@ replace_with = { version = "0.1.7" }
 
 [dev-dependencies]
 criterion = "0.5.0"
-tracy-client = { version = "0.18.0", features = ["enable"]}
 serde = { version = "1.0.106", features = ["derive"] }
 tokio = { version = "1.0.1", features = ["full", "test-util"] }
 hyper = { version = "1.1", features = ["server"] }
