--- a/Cargo.toml
+++ b/Cargo.toml
@@ -147,6 +147,7 @@ quanta = { version = "0.12", optional = true }
 replace_with = { version = "0.1.7" }
 
 [dev-dependencies]
+clickhouse-derive = { version = "0.2.0", path = "derive" }
 criterion = "0.5.0"
 serde = { version = "1.0.106", features = ["derive"] }
 tokio = { version = "1.0.1", features = ["full", "test-util"] }
