--- a/Cargo.toml
+++ b/Cargo.toml
@@ -99,7 +99,7 @@ rustls-tls-native-roots = [
 [dependencies]
 clickhouse-derive = { version = "0.2.0", path = "derive" }
 
-thiserror = "1.0.16"
+thiserror = "2.0"
 serde = "1.0.106"
 bytes = "1.5.0"
 tokio = { version = "1.0.1", features = ["rt", "macros"] }
@@ -122,7 +122,7 @@ serde_json = { version = "1.0.68", optional = true }
 lz4_flex = { version = "0.11.3", default-features = false, features = [
     "std",
 ], optional = true }
-cityhash-rs = { version = "=1.0.1", optional = true } # exact version for safety
+cityhash-rs = { version = "=1.0.1", optional = true } # exact version for safety, this package has been stable for years
 uuid = { version = "1", optional = true }
 time = { version = "0.3", optional = true }
 chrono = { version = "0.4", optional = true, features = ["serde"] }
@@ -131,7 +131,7 @@ quanta = { version = "0.12", optional = true }
 replace_with = { version = "0.1.7" }
 
 [dev-dependencies]
-criterion = "0.5.0"
+criterion = "0.6"
 serde = { version = "1.0.106", features = ["derive"] }
 tokio = { version = "1.0.1", features = ["full", "test-util"] }
 hyper = { version = "1.1", features = ["server"] }
@@ -141,4 +141,4 @@ serde_repr = "0.1.7"
 uuid = { version = "1", features = ["v4", "serde"] }
 time = { version = "0.3.17", features = ["macros", "rand"] }
 fixnum = { version = "0.9.2", features = ["serde", "i32", "i64", "i128"] }
-rand = { version = "0.8.5", features = ["small_rng"] }
+rand = { version = "0.9", features = ["small_rng"] }
