--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,19 @@ homepage = "https://clickhouse.com"
 license = "MIT OR Apache-2.0"
 readme = "README.md"
 edition = "2021"
-# update `derive/Cargo.toml` and CI if changed
+# update `workspace.package.rust-version` below and CI if changed
 # TODO: after bumping to v1.80, remove `--precise` in the "msrv" CI job
+rust-version = "1.73.0"
+
+[workspace]
+members = ["derive", "types"]
+
+[workspace.package]
+authors = ["ClickHouse Contributors", "Paul Loyd <pavelko95@gmail.com>"]
+repository = "https://github.com/ClickHouse/clickhouse-rs"
+homepage = "https://clickhouse.com"
+edition = "2021"
+license = "MIT OR Apache-2.0"
 rust-version = "1.73.0"
 
 [lints.rust]
@@ -27,15 +38,20 @@ all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
 [[bench]]
+name = "select_nyc_taxi_data"
+harness = false
+required-features = ["time"]
+
+[[bench]]
 name = "select_numbers"
 harness = false
 
 [[bench]]
-name = "insert"
+name = "mocked_insert"
 harness = false
 
 [[bench]]
-name = "select"
+name = "mocked_select"
 harness = false
 
 [[example]]
@@ -97,6 +113,7 @@ rustls-tls-native-roots = [
 
 [dependencies]
 clickhouse-derive = { version = "0.2.0", path = "derive" }
+clickhouse-types = { version = "0.1.0", path = "types" }
 
 thiserror = "2.0"
 serde = "1.0.106"
@@ -128,6 +145,7 @@ quanta = { version = "0.12", optional = true }
 replace_with = { version = "0.1.7" }
 
 [dev-dependencies]
+clickhouse-derive = { version = "0.2.0", path = "derive" }
 criterion = "0.6"
 serde = { version = "1.0.106", features = ["derive"] }
 tokio = { version = "1.0.1", features = ["full", "test-util"] }
@@ -136,6 +154,6 @@ serde_bytes = "0.11.4"
 serde_json = "1"
 serde_repr = "0.1.7"
 uuid = { version = "1", features = ["v4", "serde"] }
-time = { version = "0.3.17", features = ["macros", "rand"] }
+time = { version = "0.3.17", features = ["macros", "rand", "parsing"] }
 fixnum = { version = "0.9.2", features = ["serde", "i32", "i64", "i128"] }
 rand = { version = "0.9", features = ["small_rng"] }
