--- a/Cargo.toml
+++ b/Cargo.toml
@@ -161,3 +161,4 @@ uuid = { version = "1", features = ["v4", "serde"] }
 time = { version = "0.3.17", features = ["macros", "rand", "parsing"] }
 fixnum = { version = "0.9.2", features = ["serde", "i32", "i64", "i128"] }
 rand = { version = "0.9", features = ["small_rng"] }
+trybuild = "1.0"
