--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,10 +97,11 @@ jobs:
           down-flags: '--volumes'
 
       - run: rustup show active-toolchain -v
-      - run: cargo test
-      - run: cargo test --no-default-features
-      - run: cargo test --features uuid,time
-      - run: cargo test --all-features
+      # TODO: --workspace won't be required after splitting workspace and the main crate
+      - run: cargo test --workspace
+      - run: cargo test --workspace --no-default-features
+      - run: cargo test --workspace --features uuid,time
+      - run: cargo test --workspace --all-features
 
       - name: Run tests with ClickHouse Cloud
         env:
