--- a/Cargo.toml
+++ b/Cargo.toml
@@ -137,8 +137,8 @@ hyper-rustls = { version = "0.27.3", default-features = false, features = [
     "tls12",
 ], optional = true }
 url = "2.1.1"
-futures = "0.3.5"
-futures-channel = "0.3.30"
+futures-util = { version = "0.3.5", default-features = false, features = ["sink", "io"] }
+futures-channel = { version = "0.3.30", features = ["sink"] }
 static_assertions = "1.1"
 sealed = "0.6"
 lz4_flex = { version = "0.11.3", default-features = false, features = [
