--- a/Cargo.toml
+++ b/Cargo.toml
@@ -158,6 +158,9 @@ criterion = "0.6"
 serde = { version = "1.0.106", features = ["derive"] }
 tokio = { version = "1.0.1", features = ["full", "test-util"] }
 hyper = { version = "1.1", features = ["server"] }
+indexmap = { version = "2.10.0", features = ["serde"] }
+linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
+fxhash = { version = "0.2.1" }
 serde_bytes = "0.11.4"
 serde_json = "1"
 serde_repr = "0.1.7"
