feat(types, wip): data types wrappers

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -127,6 +127,8 @@ clickhouse-types = { version = "0.1.0", path = "types" }
 
 thiserror = "2.0"
 serde = "1.0.106"
+serde_with = "3.15.0"
+serde_bytes = "0.11.19"
 bytes = "1.5.0"
 tokio = { version = "1.0.1", features = ["rt", "macros"] }
 http-body-util = "0.1.2"
@@ -153,6 +155,7 @@ chrono = { version = "0.4", optional = true, features = ["serde"] }
 bstr = { version = "1.11.0", default-features = false }
 quanta = { version = "0.12", optional = true }
 replace_with = { version = "0.1.7" }
+derive_more = { version = "2.0.1", default-features = false, features = ["display", "from", "into", "as_ref", "deref", "deref_mut"] }
 
 [dev-dependencies]
 clickhouse-derive = { version = "0.2.0", path = "derive" }
@@ -163,7 +166,7 @@ hyper = { version = "1.1", features = ["server"] }
 indexmap = { version = "2.10.0", features = ["serde"] }
 linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
 fxhash = { version = "0.2.1" }
-serde_bytes = "0.11.4"
+serde_bytes = "0.11.19"
 serde_json = "1"
 serde_repr = "0.1.7"
 uuid = { version = "1", features = ["v4", "serde"] }
